[project]
name = "claim-status-agent"
version = "0.1.0"
description = "Outbound Twilio voice agent for medical claim-status calls"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "loguru",
  "pipecat-ai[websocket,cartesia,openai,silero,runner]>=1.3.0",
  "pipecatcloud>=0.7.1",
  "pydantic",
  "python-dotenv",
  "python-multipart",
  "twilio",
  "uvicorn[standard]"
]

[dependency-groups]
dev = [
  "pytest"
]
